# bayesian-neural-networks

./:  article.tex  Implementation.ipynb  LICENSE  article.tex  pyproject.toml  Сomparison.ipynb
.devcontainer/: devcontainer.json
article/: article.tex  arxiv.sty
experiments/alzheimers_disease/: n_hidden_1_dims_hidden_1_64.csv
notebooks/: AlzheimersDisease.ipynb  HeartDisease.ipynb  Plot.ipynb  Сomparison.ipynb
src/: __init__.py  bayesian_binary_classifier.py  bayesian_block.py  bayesian_linear.py  bayesian_module.py  bayesian_neural_network.py  bayesian_perceptrone.py  bayesian_res_net.py
src/data/: __init__.py  abstract_tabular_dataset.py  polars_tabular_dataset.py  torch_tabular_dataset.py  types.py
src/data/preprocessing/: __init__.py  metadata.py  preprocessor.py  scaler.py  utils.py
src/data/preprocessing/transformers/: __init__.py  base.py  binary.py  binary_encoder.py  binary_target.py  hash_encoder.py  index.py  missing_indicator.py  numeric.py  one_hot_encoder.py  power_transformer.py  standard_scaler.py
src/experiments/: utils.py
src/nn/: __init__.py  affine.py  batchnorm.py  container.py  linear.py
src/nn/backbones/: __init__.py  bayesian_linear_backbone.py  bayesian_perceptrone.py  bayesian_res_net.py  perceptrone.py
src/nn/base/: __init__.py  bayesian_block.py  bayesian_module.py  bayesian_neural_network.py  bayesian_neural_network_backbone.py  bayesian_neural_network_head.py  bayesian_parameter.py
src/nn/heads/: __init__.py  binary_classification_head.py  gaussian_regression_head.py
src/nn/layers/: __init__.py  bayesian_linear.py  bayesian_perceptrone.py  bayesian_res_net.py  bayesian_res_net_last.py  perceptrone.py  res_net.py
src/nn/models/: __init__.py  bayesian_binary_classifier.py  bayesian_binary_perceptrone.py  bayesian_binary_res_net.py  bayesian_regressor.py  binary_classifier.py  binary_perceptrone.py
