[project]
name = "bayesian-neural-networks"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Dmitriy Basov", email = "dimabasow@vk.com" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.27.1",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
cu126 = [
    "torch>=2.6.0",
]
cu128 = [
    "torch>=2.6.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
url = "file:///workspaces/bayesian-neural-networks/pytorch-cu128-nightly"

[[tool.uv.index]]
url = "file:///workspaces/bayesian-neural-networks/pytorch-cu126"


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
]
