[project]
name = "bayesian-neural-networks"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Dmitriy Basov", email = "dimabasow@vk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.27.1",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.6.0",
]
cu126 = [
    "torch>=2.6.0",
]
cu128 = [
    "torch>=2.8.0.dev20250418",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128-nightly", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
