[project]
name = "bayesian-neural-networks"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Dmitriy Basov", email = "dimabasow@vk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "markupsafe==2.1.3",
    "polars>=1.30.0",
    "polars-hash>=0.5.4",
    "pyarrow>=20.0.0",
    "scipy>=1.15.3",
    "torch[cu128]>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
